# Hyped.pl

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: CD.yml  CI.yml  black.yml  codeql-analysis.yml  deploy.yml
backend/: Dockerfile  api.py  app.py  authorization.py  config.py  config_example.py  core.py  models.py  others.py  pyproject.toml  requirements.txt
backend/templates/: 404.html  500.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  JWT.js  index.css  index.js  main.jsx  useToken.js
frontend/src/Components/: MyCard.js  MyCardList.js  MyComments.js  MyComments.jsx  MyFooter.js  MyLoader.jsx  MyNavbar.js  MyNavbar.jsx  MyProfileRating.js  Navbar.js
frontend/src/Components/Card/: MyCard.css  MyCard.js
frontend/src/Context/: ThemeContext.jsx
frontend/src/Sites/: MyAccountActivate.js  MyChangePassword.js  MyChangePassword.jsx  MyFilm.js  MyFilm.jsx  MyFilmList.js  MyFilmList.jsx  MyFilmList2.js  MyForgetPassword.js  MyForgetPassword.jsx  MyHome.js  MyHome.jsx  MyLogin.js  MyLogin.jsx  MyProfile.js  MyProfile.jsx  MyRegister.js  MyRegister.jsx  MySearch.js  MySearch.jsx  MySerial.js  MySerial.jsx  MySerialList.js  MySerialList.jsx
frontend/src/Styles/: App.css  MyCardList.css  MyChangePassword.css  MyFilm.css  MyFooter.css  MyForgetPassword.css  MyHome.css  MyNavbar.css  MyProfile.css  MyProfileRating.css  index.css
frontend/src/Utils/: JWT.jsx  i18n.js  setupProxy.js  setupProxy.jsx
(+14 files in other folders)
