[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kamyrdol32 <kamyrdol32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-mail = "^0.9.1"
flask-sqlalchemy = "^3.0.3"
flask-jwt-extended = "^4.4.4"
flask-cors = "^3.0.10"
pyjwt = "^2.6.0"
sqlalchemy = "^2.0.6"
gunicorn = "^20.1.0"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
